--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
  @import "font-awesome";
 
  .jumbotron {
-  background-image:url('http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-542213.png');
+  background-image:url('http://ww4.sinaimg.cn/large/006tKfTcgy1ff3z3hsby5j31kw10eu0z.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 110px;
@@ -28,28 +28,29 @@
 
 .title {
   font-family: "Helvetica Neue", "Microsoft Yahei", 微软雅黑;
-  text-align: center;
-  margin-top: 200px;
+  text-align: left;
+  margin-top: 100px;
   margin-bottom: 80px;
+  color: white !important
 }
 
 .slogan {
   margin-top: 10px;
   margin-bottom: 50px;
-  text-align: center;
+  text-align: left;
   color: white;
   top: 12px;
 }
 
 .lead {
   margin-bottom: 60px;
-  text-align: center;
+  text-align: left;
   color: white;
 }
 
 .caption {
   margin: 30px;
-  text-align: center;
+  text-align: left;
   top: 20px;
 }
 
