--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,19 +1,19 @@
 <div class="jumbotron">
-  <h1 class="title">18K Offer</h1>
-  <p class="slogan">18K Offer 是一个提供18K薪水工作机会的求职网站。
+  <h1 class="title">健身谣言粉碎机</h1>
+  <p class="slogan">这是一个粉碎错误健身知识的网站。
   <br>
-  我们希望藉由这个网站，能让大家找到且应征上高薪且优质的工作。
+  帮助你找到正确的健身方法。
   <br>
-  凭借自己的努力和天份也会变 Winner
+  知识带来自由
   </p>
-  <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">马上应征</a></p>
+  <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">进入讨论群</a></p>
 </div>
 <section id="company">
   <div class = "container-fluid">
     <div class="row">
       <div class="col-sm-4 ">
         <div class="thumbnail">
-          <img src="http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-Screenshot%20at%20Apr%2015%2021-43-31.png" alt="search" class = "img-thumbnail">
+          <img src="https://www.google.com.hk/search?safe=strict&tbm=isch&q=%E5%81" alt="search" class = "img-thumbnail">
           <div class="caption">
             <h3>北京朝阳建外SOHO</h3>
           </div>
