add more content

--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,7 @@
-<footer class="container" style="margin-top: 100px;">
-    <p class="text-center">Copyright ©2016 Rails101
-        <br>Design by yourname
-
-    </p>
-</footer>
+<footer class="text-center navbar-fixed-bottom">
+   <div class="footer-below">
+       <p class="text-center">快来加入我们吧
+           <br>致所有的学习终身学习者
+       </p>
+   </div>
+  </footer>
