--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,40 +1,64 @@
-<div class="jumbotron">
-  <h1 class="title">健身谣言粉碎机</h1>
-  <p class="slogan">这是一个粉碎错误健身知识的网站。
-  <br>
-  帮助你找到正确的健身方法。
-  <br>
-  知识带来自由
-  </p>
-  <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">进入讨论群</a></p>
-</div>
-<section id="company">
-  <div class = "container-fluid">
-    <div class="row">
-      <div class="col-sm-4 ">
-        <div class="thumbnail">
-          <img src="https://www.google.com.hk/search?safe=strict&tbm=isch&q=%E5%81" alt="search" class = "img-thumbnail">
-          <div class="caption">
-            <h3>北京朝阳建外SOHO</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4 ">
-        <div class="thumbnail">
-          <img src="http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-Screenshot%20at%20Apr%2015%2021-43-48.png" alt="bid" class = "img-thumbnail">
-          <div class="caption">
-            <h3>info@18koffer.com</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4 ">
-        <div class="thumbnail">
-          <img src="http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-Screenshot%20at%20Apr%2015%2021-44-00.png" alt="heart" class = "img-thumbnail">
-          <div class="caption">
-            <h3>010-12344321</h3>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<div class="col-md-12">
+   <div class="row box">
+     <div class="box-inner col-md-6 col-md-offset-3">
+       <h1 class="title">师保网</h1>
+       <p class="slogan">师保网是一个快速匹配优秀教师的网站。
+         <br>
+         满足学生个性化的需求。
+         <br>
+        让优秀的教育者来到你身边。
+       </p>
+       <p class="lead">
+         <%= link_to '师傅入口', jobs_path, class: 'btn btn-danger' %>
+       </p>
+     </div>
+   </div>
+ </div>
+
+ <div class="content-section-a">
+   <div class="container">
+     <div class="row">
+       <div class="col-lg-5 col-sm-6">
+         <hr class="section-heading-spacer">
+         <div class="clearfix"></div>
+         <h2 class="section-heading">现在的学习不一定发生在课堂</h2>
+         <p class="lead">我们既可以是老师，也可以是学生，我们是终身学习者</p>
+       </div>
+       <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+         <%= image_tag 'http://ww3.sinaimg.cn/large/006tNbRwgy1ff7cqj8iixj30kc0dcdiz.jpg', class: 'img-responsive' %>
+       </div>
+     </div>
+   </div>
+ </div>
+
+ <div class="content-section-b">
+   <div class="container">
+     <div class="row">
+       <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+         <hr class="section-heading-spacer">
+         <div class="clearfix"></div>
+         <h2 class="section-heading">当你有某项特长</h2>
+         <p class="lead"> <br>无论是数理化生...</br> <br>还是琴棋书画</br><br>亦或是烹饪、插画、整理收纳...</br><br>你就是我们需要的老师。</br></p>
+       </div>
+       <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+         <%= image_tag 'http://ww4.sinaimg.cn/large/006tNbRwgy1ff7ctqfxs8j30np0zkwj2.jpg', class: 'img-responsive' %>
+       </div>
+     </div>
+   </div>
+ </div>
+
+ <div class="content-section-a">
+   <div class="container">
+     <div class="row">
+       <div class="col-lg-5 col-sm-6">
+         <hr class="section-heading-spacer">
+         <div class="clearfix"></div>
+         <h2 class="section-heading">当你需要学习</h2>
+         <p class="lead"> <br>无论是想提高考试成绩</br> <br>还是学习一门技能</br><br>亦或是想要陶冶情操。</br><br>这里可以快速匹配优秀的师资</br></p>
+       </div>
+       <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+         <%= image_tag 'http://ww4.sinaimg.cn/large/006tNbRwgy1ff7cy7yvgvj30zk0qo4e2.jpg', class: 'img-responsive' %>
+       </div>
+     </div>
+   </div>
+ </div>
