--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,58 +19,129 @@
  @import "bootstrap";
  @import "font-awesome";
 
- .jumbotron {
-  background-image:url('http://ww4.sinaimg.cn/large/006tKfTcgy1ff3z3hsby5j31kw10eu0z.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-bottom: 110px;
+ //---------Navbar---------
+
+  .navbar-default {
+      background-color: #212121;
+      border-color: #212121;
+      border-radius: 0;
+  }
+
+  .navbar-default .navbar-brand {
+      color: #E8F5E9;
+      padding: 10px 15px;
+      line-height: 30px;
+  }
+
+  .navbar-default .navbar-brand:hover,
+  .navbar-default .navbar-brand:focus {
+      color: #E8F5E9;
+      background-color: #E8F5E9;
+  }
+
+  .navbar-default .navbar-nav > li > a {
+      color: #E8F5E9;
+  }
+
+  .navbar-default .navbar-nav > li > a:hover,
+  .navbar-default .navbar-nav > li > a:focus {
+      color: #FF6F00;
+      background-color: transparent;
+  }
+
+  .navbar-default .navbar-nav > .active > a,
+  .navbar-default .navbar-nav > .active > a:hover,
+  .navbar-default .navbar-nav > .active > a:focus {
+      color: #FF6F00;
+      background-color: #FFE0B2;
+  }
+
+  .navbar-default .navbar-nav > .open > a,
+  .navbar-default .navbar-nav > .open > a:focus,
+  .navbar-default .navbar-nav > .open > a:hover {
+      background-color: #FFE0B2;
+      color: #212121;
+  }
+
+  //---------Box---------
+
+  .box {
+      background-image: url("http://ww3.sinaimg.cn/large/006tNbRwgy1ff70gwc5yuj30zk0nhtfh.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin-bottom: 50px;
+      margin-top: -20px;
+
+      .box-inner {
+          background-color: rgba(250, 250, 250, 0.69);
+          padding-bottom: 5px;
+          margin-top: 150px;
+          margin-bottom: 150px;
+      }
+
+     .title {
+         text-align: center;
+         margin-bottom: 80px;
+     }
+
+     .slogan {
+         color: #222;
+         margin-top: 10px;
+         margin-bottom: 50px;
+         text-align: center;
+         font-size: 25px;
+         top: 12px;
+     }
+
+     .lead {
+         margin-bottom: 60px;
+         text-align: center;
+         color: white;
+     }
+ }
+
+ //---------Content---------
+
+ .content-section-a {
+     padding: 50px 0;
+     background-color: #f8f8f8;
+ }
+
+ .content-section-b {
+     padding: 50px 0;
+     border-top: 1px solid #e7e7e7;
+     border-bottom: 1px solid #e7e7e7;
+ }
+
+ .section-heading-spacer {
+     float: left;
+     width: 200px;
+     border-top: 3px solid #e7e7e7;
+ }
+
+ .section-heading {
+     margin-bottom: 30px;
+ }
+
+ .lead {
+     font-size: 18px;
+     font-weight: 400;
+ }
+
+ //---------Footer---------
+
+ footer {
+    color: white;
 }
 
-.title {
-  font-family: "Helvetica Neue", "Microsoft Yahei", 微软雅黑;
-  text-align: left;
-  margin-top: 100px;
-  margin-bottom: 80px;
-  color: white !important
+footer .footer-below {
+    padding: 25px 0;
+    background-color: #233140;
 }
 
-.slogan {
-  margin-top: 10px;
-  margin-bottom: 50px;
-  text-align: left;
-  color: white;
-  top: 12px;
-}
+//--------common---------
 
-.lead {
-  margin-bottom: 60px;
-  text-align: left;
-  color: white;
-}
-
-.caption {
-  margin: 30px;
-  text-align: left;
-  top: 20px;
-}
-
-.thumbnail {
-    border: 0 none;
-    box-shadow: none;
-    margin-top: 60px;
-}
-
-.custab{
-  border: 1px solid #ccc;
-
-  padding: 5px;
-  margin: 5% 0;
-  box-shadow: 3px 3px 2px #ccc;
-
-  transition: 0.5s;
-}
-
-.custab:hover{
-  box-shadow: 3px 3px 0px transparent;
-  transition: 0.5s;
+.col-centered {
+  float: none;
+  margin: 0 auto;
 }
