--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,12 @@
     </head>
 
     <body>
-
-        <div class="container-fluid">
+        <div class="container-fluid" style="margin-bottom: 100px;">
+          <div class="row">
             <%= render "common/navbar" %>
-            <%= render "common/flashes" %>
             <%= yield %>
         </div>
-
+      </div>
         <%= render "common/footer" %>
-
     </body>
 </html>
