--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,7 +1,7 @@
-<footer class="text-center navbar-fixed-bottom">
+<footer class="text-center">
    <div class="footer-below">
-       <p class="text-center">快来加入我们吧
-           <br>致所有的学习终身学习者
+       <p class="text-center">Copyright ©joblisting
+           <br>Design by Scarlett
        </p>
    </div>
   </footer>
