--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,47 +21,48 @@
 
  //---------Navbar---------
 
-  .navbar-default {
-      background-color: #212121;
-      border-color: #212121;
-      border-radius: 0;
-  }
+.navbar-default {
+    background-color: #212121;
+    border-color: #212121;
+    margin-bottom: 0;
+    border-radius: 0;
+}
 
-  .navbar-default .navbar-brand {
-      color: #E8F5E9;
-      padding: 10px 15px;
-      line-height: 30px;
-  }
+.navbar-default .navbar-brand {
+    color: #EF6C00;
+    padding: 10px 15px;
+    line-height: 30px;
+}
 
-  .navbar-default .navbar-brand:hover,
-  .navbar-default .navbar-brand:focus {
-      color: #E8F5E9;
-      background-color: #E8F5E9;
-  }
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+    color: #FF6F00;
+    background-color: transparent;
+}
 
-  .navbar-default .navbar-nav > li > a {
-      color: #E8F5E9;
-  }
+.navbar-default .navbar-nav > li > a {
+    color: #EF6C00;
+}
 
-  .navbar-default .navbar-nav > li > a:hover,
-  .navbar-default .navbar-nav > li > a:focus {
-      color: #FF6F00;
-      background-color: transparent;
-  }
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+    color: #FF6F00;
+    background-color: transparent;
+}
 
-  .navbar-default .navbar-nav > .active > a,
-  .navbar-default .navbar-nav > .active > a:hover,
-  .navbar-default .navbar-nav > .active > a:focus {
-      color: #FF6F00;
-      background-color: #FFE0B2;
-  }
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    color: #FF6F00;
+    background-color: #FFE0B2;
+}
 
-  .navbar-default .navbar-nav > .open > a,
-  .navbar-default .navbar-nav > .open > a:focus,
-  .navbar-default .navbar-nav > .open > a:hover {
-      background-color: #FFE0B2;
-      color: #212121;
-  }
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:focus,
+.navbar-default .navbar-nav > .open > a:hover {
+    background-color: #FFE0B2;
+    color: #212121;
+}
 
   //---------Box---------
 
@@ -70,7 +71,6 @@
       background-repeat: no-repeat;
       background-size: cover;
       margin-bottom: 50px;
-      margin-top: -20px;
 
       .box-inner {
           background-color: rgba(250, 250, 250, 0.69);
@@ -131,14 +131,15 @@
  //---------Footer---------
 
  footer {
-    color: white;
-}
+     color: white;
+     margin-top: 500px;
+ }
 
-footer .footer-below {
-    padding: 25px 0;
-    background-color: #233140;
-}
-
+ footer .footer-below {
+     padding: 25px 0;
+     background-color: #233140;
+ }
+ .fixed-bottom {position: fixed;bottom: 0;width:100%;}
 //--------common---------
 
 .col-centered {
